--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -34,6 +34,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      # 👇 Build steps
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -43,12 +44,13 @@ jobs:
         run: yarn install --frozen-lockfile --non-interactive
       - name: Build
         run: yarn build
+      # 👆 Build steps
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
+          # 👇 Specify build output path (Upload entire repository)
           path: build
       - name: Deploy to GitHub Pages
         id: deployment
