--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -34,23 +34,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # 👇 Build steps
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: npm
+          cache: yarn
       - name: Install dependencies
-        run: npm ci --ignore-scripts --no-audit --prefer-offline
+        run: yarn install --frozen-lockfile --non-interactive
       - name: Build
-        run: npx build
-      # 👆 Build steps
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # 👇 Specify build output path (Upload entire repository)
+          # # 👇 Specify build output path (Upload entire repository)
           path: build
       - name: Deploy to GitHub Pages
         id: deployment
