--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,4 +1,4 @@
 Stardust:
   label: Stardust
   permalink: /Stardust
-  description: Trivial things like stardust 🌠
+  description: Những điều vụn vặt như bụi sao 🌠
