--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 NhanAZ:
-  name: Nguyen Thanh Nhan
+  name: Nguyễn Thành Nhân
   title: Người sáng lập Bụi sao
   url: https://github.com/NhanAZ
   image_url: https://github.com/NhanAZ.png
