--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 NhanAZ:
   name: Nguyễn Thành Nhân
-  title: Người sáng lập Bụi sao
+  title: Người sáng lập Stardust
   url: https://github.com/NhanAZ
   image_url: https://github.com/NhanAZ.png
   email: nhanaz@duck.com
