Thêm thẻ "Chính trị"

--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -2,3 +2,7 @@ Stardust:
   label: Stardust
   permalink: /Stardust
   description: Những điều vụn vặt như bụi sao 🌠
+ChinhTri:
+  label: "Chính trị"
+  permalink: /ChinhTri
+  description: Những chủ đề liên quan đến chính trị 🏛️
